// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amp Story Page A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`Amp Story Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`Amp Story Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`Amp Story Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=40&p=story::gahuza.story.23313911.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:cps:48fe44a1-f432-4475-942d-ab017d13b4d0]&x2=[amp]&x3=[news-gahuza]&x4=[rw]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[Test+story+with+different+IDT2+types+-+BBC+News+Gahuza]&x11=[2020-06-09T16:26:57.000Z]&x12=[2020-06-09T17:09:42.000Z]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`Amp Story Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "STY",
    "domain": "test.bbc.co.uk",
    "sections": "Gahuza, Gahuza - Urupapuro rw'itangiriro, Gahuza - STY, Gahuza - Urupapuro rw'itangiriro - STY, Gahuza - undefined-category",
    "title": "Test story with different IDT2 types",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`Amp Story Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`Amp Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`Amp Story Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`Amp Story Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`Amp Story Page Footer Link should match text and url 2`] = `
Object {
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`Amp Story Page Footer Link should match text and url 3`] = `
Object {
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`Amp Story Page Footer Link should match text and url 4`] = `
Object {
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`Amp Story Page Footer Link should match text and url 5`] = `
Object {
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`Amp Story Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Amp Story Page Footer Link should match text and url 7`] = `
Object {
  "text": "Vugana na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754061",
}
`;

exports[`Amp Story Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Amp Story Page Footer Link should match text and url 9`] = `
Object {
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Amp Story Page Header I can see the branding 1`] = `"BBC News, Gahuza"`;

exports[`Amp Story Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`Amp Story Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Amakuru",
  "url": "/gahuza/amakuru",
}
`;

exports[`Amp Story Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Imikino",
  "url": "/gahuza/imikino",
}
`;

exports[`Amp Story Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Video",
  "url": "/gahuza/media/video",
}
`;

exports[`Amp Story Page Includes IDT2 I can see a fallback image 1`] = `
<amp-img
  alt="Map: St. Albans"
  attribution=""
  height="940"
  layout="responsive"
  src="https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/470"
  srcset="https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/350 350w,https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/470 470w"
  width="940"
/>
`;

exports[`Amp Story Page Lead image I can see an image with a caption 1`] = `"Insiguro y'isanamu, Test caption for image 1"`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-72x72.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-96x96.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-128x128.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-144x144.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`Amp Story Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`Amp Story Page SEO Canonical link 1`] = `"http://localhost:7080/gahuza/23313911"`;

exports[`Amp Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Amp Story Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Amp Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Amp Story Page SEO Heading level 1 1`] = `"Test story with different IDT2 types"`;

exports[`Amp Story Page SEO Lang attribute 1`] = `"rw"`;

exports[`Amp Story Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "NewsArticle",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
          "width": 1024,
        },
        "name": "BBC News Gahuza",
        "noBylinesPolicy": "https://www.bbc.com/gahuza/institutional-49283343#authorexpertise",
      },
      "dateModified": "2020-06-09T17:09:42.000Z",
      "datePublished": "2020-06-09T16:26:57.000Z",
      "description": "Testing types of IDT2",
      "headline": "Test story with different IDT2 types",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/gahuza/23313911",
        "@type": "WebPage",
        "name": "Test story with different IDT2 types",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
          "width": 1024,
        },
        "name": "BBC News Gahuza",
        "publishingPrinciples": "https://www.bbc.com/gahuza/institutional-49283343",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
      "url": "http://localhost:7080/gahuza/23313911",
    },
  ],
}
`;

exports[`Amp Story Page SEO OG description 1`] = `"Testing types of IDT2"`;

exports[`Amp Story Page SEO OG image 1`] = `"https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg"`;

exports[`Amp Story Page SEO OG image alt 1`] = `"Test caption for first image"`;

exports[`Amp Story Page SEO OG locale 1`] = `"rw-RW"`;

exports[`Amp Story Page SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`Amp Story Page SEO OG title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;

exports[`Amp Story Page SEO OG type 1`] = `"article"`;

exports[`Amp Story Page SEO OG url 1`] = `"http://localhost:7080/gahuza/23313911"`;

exports[`Amp Story Page SEO Page title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;

exports[`Amp Story Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Amp Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Amp Story Page SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`Amp Story Page SEO Twitter description 1`] = `"Testing types of IDT2"`;

exports[`Amp Story Page SEO Twitter image alt 1`] = `"Test caption for first image"`;

exports[`Amp Story Page SEO Twitter image src 1`] = `"https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg"`;

exports[`Amp Story Page SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`Amp Story Page SEO Twitter title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;
